--- a/SwitchMediaHost/Config.ini
+++ b/SwitchMediaHost/Config.ini
@@ -1,5 +1,5 @@
 [Display]
-theme = black
+theme = galaxy
 [Special]
 ; *If enabled, on special holidays the theme will change based on the corresponding holiday
 
